--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Process the md files
-        run: ./process.sh
+        run: ./process.sh --debug
 
       # Runs a set of commands using the runners shell
       - name: Archive output artifacts
