Add cover letters for Ceros and deskbird positions, and update VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "github.copilot.chat.codesearch.enabled": true
+    "github.copilot.chat.codesearch.enabled": true,
+    "debug.javascript.defaultRuntimeExecutable": {
+        "pwa-node": "/Users/alberto/.local/share/mise/shims/node"
+    }
 }
